# 2023_20447938

./: .gitignore  adder_8h_source.html  index.html
.github/workflows/: doxygen-deploy.yml
Worksheet3/: adder.h
Worksheet3/adder_dynamic/include/: adder.h
Worksheet4/calc/: CMakeLists.txt  adder.h
Worksheet4/calc_dynamic/: CMakeLists.txt  adder.cpp  adder.h
Worksheet4/hello_cmake/: CMakeLists.txt
Worksheet5/: CMakeLists.txt  adder.h  calc.cpp
Worksheet6/WS6/: CMakeLists.txt  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet6/WS6/TreeModel/: ModelPart.cpp  ModelPart.h
Worksheet7/Exercise1/: CMakeLists.txt  CylinderExample.cxx
Worksheet7/Exercise3/: CMakeLists.txt  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet7/Exercise3/TreeModel/: ModelPart.cpp  ModelPart.h
